--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
 
             <br/>
 
-            <input type="submit" class="btn-info" value="predict">
+            <input type="submit" class="btn-info" value="Predict">
         </form>
     </div>
 
