--- a/templates/result.html
+++ b/templates/result.html
@@ -11,9 +11,9 @@
 
     <div class="results">
         {% if prediction == 1 %}
-        <h2 style="color:red">SPAM News</h2>
+        <h2 style="color:red">Not SPAM</h2>
         {% elif prediction == 0 %}
-        <h2 style="color:green">Not a SPAM</h2>
+        <h2 style="color:green">SPAM News</h2>
         {% endif %}
     </div>
 </body>
